Fixed inconsistent spacing, and redundant text

--- a/Website/pages/notification/notification.css
+++ b/Website/pages/notification/notification.css
@@ -54,8 +54,10 @@
 }
 
 .notification-text {
+    box-sizing: border-box;
     display: block;
     width: 75%;
+    max-width: 75%;
 
     padding: 10px;
     margin: 0;
@@ -64,10 +66,12 @@
 }
 
 .date-text {
+    box-sizing: border-box;
     padding: 10px;
     margin: 0;
 
     width: 25%;
+    max-width: 25%;
     text-align: left;
 }
 
