--- a/Website/styles/default.css
+++ b/Website/styles/default.css
@@ -88,11 +88,12 @@ html, body{
 
 .notification-tooltip {
     align-self: flex-start;
-    margin-left: -22%;
+    margin-top: 5px;
+    margin-left: -340px;
 
-    width: 40%;
-    height: 50%;
-    position: fixed;
+    width: 600px;
+    height: 300px;
+    position: absolute;
     display: none;
 }
 
